tests/ui/unit_struct.stderr
error: fixed-derive error: Cannot deserialize type with no inner data
 --> tests/ui/unit_struct.rs:4:8
  |
4 | struct Thing;
  |        ^^^^^
